<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainmenu.inspeccion.InspeccionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/include"
            layout="@layout/app_bar_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include">

            <Button
                android:id="@+id/btn_encabezado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/boton_personalizado"
                android:drawableStart="@drawable/ic_insp_encabezado"
                android:text="@string/action_encabezado"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_contenedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/boton_personalizado"
                android:drawableStart="@drawable/ic_insp_container"
                android:text="@string/action_contenedor"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_chassis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/boton_personalizado"
                android:drawableStart="@drawable/ic_insp_chassis"
                android:text="@string/action_chassis"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_sellos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/boton_personalizado"
                android:drawableStart="@drawable/ic_insp_sellos"
                android:text="@string/action_sellos"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_llantas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/boton_personalizado"
                android:drawableStart="@drawable/ic_insp_llanta"
                android:text="@string/action_llantas"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/col_Black">

                <EditText
                    android:id="@+id/edt_observacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/prompt_observacion"
                    android:lines="4"
                    android:maxLength="200"
                    android:maxLines="4" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_descartar_eir"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/boton_personalizado"
                    android:text="@string/action_descartar_eir" />


                <Button
                    android:id="@+id/btn_terminar_inspeccion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/boton_personalizado"
                    android:text="@string/action_terminar_inspeccion" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>