<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainmenu.inspeccion.menu.sellos.SellosActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_naportec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/naportec_logo_grande" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_naportec" />

        <LinearLayout
            android:id="@+id/sellos_form"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_administrator_male"
                    android:gravity="center"
                    android:hint="@string/prompt_usuario"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="24sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <in.anshul.libray.PasswordEditText
                    android:id="@+id/clave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/prompt_clave"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/prompt_clave"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="24sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/inicia_sesion"
                style="RaisedButtonDark"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:text="@string/action_iniciar_sesion"
                android:textColor="?attr/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout_prueba"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_btn_states">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="PRUEBA"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>